--- a/CMPE256_MarketBasket_Apriori.ipynb
+++ b/CMPE256_MarketBasket_Apriori.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "CMPE256_MarketBasket_Apriori.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "authorship_tag": "ABX9TyPsdW2KAGNH6w+5Q7yetTQk",
       "include_colab_link": true
@@ -188,11 +189,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VLeshEl0ESAV",
-        "outputId": "795849eb-8d6f-45f8-fb5d-70ac15a97cb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VLeshEl0ESAV",
+        "outputId": "795849eb-8d6f-45f8-fb5d-70ac15a97cb6"
       },
       "source": [
         "print(\"Association Rules using Apriori Method:- \\n\")\n",
@@ -262,11 +263,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JcijtjFgEc6Z",
-        "outputId": "827f93e5-3309-4f06-c965-83cc565e1c53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JcijtjFgEc6Z",
+        "outputId": "827f93e5-3309-4f06-c965-83cc565e1c53"
       },
       "source": [
         "data_frame_test = pd.read_csv('/content/gdrive/MyDrive/testarules.csv')\n",
@@ -296,12 +297,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qes3irmGE22o",
-        "outputId": "adbaa81b-cc1a-411a-899e-385dae3bd9d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "qes3irmGE22o",
+        "outputId": "adbaa81b-cc1a-411a-899e-385dae3bd9d6"
       },
       "source": [
         "data_frame_test"
@@ -374,11 +375,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MjxqfXruE_86",
-        "outputId": "1370422d-c1b5-4cdb-ceaa-91478ee8b852",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MjxqfXruE_86",
+        "outputId": "1370422d-c1b5-4cdb-ceaa-91478ee8b852"
       },
       "source": [
         "data_frame_test['Item1']"
@@ -401,12 +402,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8oQdyYPIFFeq",
-        "outputId": "ea2ee86b-76d4-480b-b05d-ff23157c6660",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "8oQdyYPIFFeq",
+        "outputId": "ea2ee86b-76d4-480b-b05d-ff23157c6660"
       },
       "source": [
         "freq_itemset_using_apriori[ freq_itemset_using_apriori['itemsets'] == {'Dark Chocolate Minis'} ]"
@@ -471,11 +472,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t1Sfb1OuFQb9",
-        "outputId": "8133194f-96f6-4e99-f870-968508510c54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t1Sfb1OuFQb9",
+        "outputId": "8133194f-96f6-4e99-f870-968508510c54"
       },
       "source": [
         "data_frame_test['Item2']"
@@ -498,12 +499,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J7aS1pVAFT_0",
-        "outputId": "b2985098-79c4-4f90-9823-1b319d07cb4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "J7aS1pVAFT_0",
+        "outputId": "b2985098-79c4-4f90-9823-1b319d07cb4c"
       },
       "source": [
         "freq_itemset_using_apriori[ freq_itemset_using_apriori['itemsets'] == {'Organic Pink Lemonade Bunny Fruit Snacks'} ]"
@@ -568,11 +569,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ETgwaR44Fk_1",
-        "outputId": "d34048e8-6cf6-4c96-e756-abfbb37ebd9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ETgwaR44Fk_1",
+        "outputId": "d34048e8-6cf6-4c96-e756-abfbb37ebd9c"
       },
       "source": [
         "data_frame_test['Item3']"
@@ -595,12 +596,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o9gvymCTFn8l",
-        "outputId": "2f82b18d-5b39-4365-d4ce-04178244e0ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "o9gvymCTFn8l",
+        "outputId": "2f82b18d-5b39-4365-d4ce-04178244e0ad"
       },
       "source": [
         "freq_itemset_using_apriori[ freq_itemset_using_apriori['itemsets'] == {'Peach-Pear Sparkling Water'} ]"
